publish/Single-Node_SLURM-DSVM_Ubuntu_SecureVNet/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "VirtualMachineName": {
        "type": "string",
        "defaultValue": "",
        "minLength": 4,
        "metadata": {
          "description": "The name you want to give your Virtual Machine. Linux VM names may only contain letters, numbers, '.', and '-'."
        }
      },
      "Size": {
        "type": "string",
        "defaultValue": "120 CPU cores, 456 GB of RAM",
        "allowedValues": [
          "120 CPU cores, 456 GB of RAM",
          "64 CPU cores, 256 GB of RAM"
        ],
        "metadata": {
          "description": "Choose a virtual machine size with or without a GPU."
        }
      },
      "adminUsername": {
        "type": "string",
        "minLength": 1,
        "maxLength": 64,
        "metadata": {
          "description": "The username for the Administrator's account. A username must only contain letters, numbers, hyphens, and underscores and may not start with a hyphen or number."
        }
      },
      "adminPassword": {
          "type": "securestring",
          "minLength": 12,
          "maxLength": 72,
          "metadata": {
          "description": "Password for the Virtual Machine. It must be at least 12 characters long, and have 3 of the following: 1 lower case character, 1 upper case character, 1 number, and 1 special character."
          }
      },
      "instanceType": {
        "type": "string",
        "defaultValue": "Regular",
        "allowedValues": [
          "Spot",
          "Regular"
        ],
        "metadata": {
          "description": "Select between a regular or a spot instance. Spot instances cost significantly less but can be turned off unexpectedly."
        }
      },
    },
    "variables": {
      "osDiskSize": "256",
      "vmSize": {
        "120 CPU cores, 456 GB of RAM": "Standard_HB120rs_v3",
        "64 CPU cores, 256 GB of RAM": "Standard_D64as_v5"
      },
      "location": "[resourceGroup().location]",

      "uniqueVMName": "[concat(replace(toLower(parameters('VirtualMachineName')), '.', ''), '-', uniqueString(parameters('VirtualMachineName')))]",

      // Only the VNet name
      "virtualNetworkName": "[variables('loome').Account.SecureVnet.VnetName]",

      // Only the subnet name
      "subnetName": "[variables('loome').ProjectResources.SecureVnet.SubnetName]",

      // Full VNet ID (across subscription and resource group)
      "vnetId": "[extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', variables('loome').Account.SecureVnet.SubscriptionId, variables('loome').Account.SecureVnet.ResourceGroupName), 'Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",

      // Full subnet reference (VNet ID + subnet name)
      "subnetRef": "[concat(variables('vnetId'), '/subnets/', variables('subnetName'))]",

      // NSG and NIC
      "networkSecurityGroupName": "[concat('NSG', uniqueString(resourceGroup().id))]",
      "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]",
      "networkInterfaceName": "[concat(parameters('VirtualMachineName'), 'NetInt')]",

      "osDiskType": "Premium_LRS",
      "instancePriority": {
        "Spot": "Spot",
        "Regular": "Regular"
      },
      "instanceEvictionPolicy": {
        "Spot": "Deallocate",
        "Regular": null
      },
      "instanceMaxPrice": {
        "Spot": -1,
        "Regular": null
      },
      "scriptParse": "aW1wb3J0IGFyZ3BhcnNlCmltcG9ydCByZQppbXBvcnQganNvbgppbXBvcnQgb3MKCmRlZiBwYXJzZV9maWxlKGlucHV0X3BhdGgpOgogICAgd2l0aCBvcGVuKGlucHV0X3BhdGgsICdyJykgYXMgZjoKICAgICAgICBkYXRhID0gZi5yZWFkKCkKCiAgICBlbnRyaWVzID0gcmUuZmluZGFsbChyJ1xbKC4qPylcXScsIGRhdGEpCgogICAgb25seV9uYW1lID0gW10KICAgIG9ubHlfa2V5ID0gW10KICAgIG9ubHlfZmlsZSA9IFtdCgogICAgZm9yIGVudHJ5IGluIGVudHJpZXM6CiAgICAgICAgcGFpcnMgPSByZS5maW5kYWxsKHInIiguKj8pIjoiKC4qPykiJywgZW50cnkpCiAgICAgICAga2V5cyA9IFtrIGZvciBrLCBfIGluIHBhaXJzXQ [...]
      "scriptMount": "aW1wb3J0IGpzb24KaW1wb3J0IGFyZ3BhcnNlCmltcG9ydCBvcwppbXBvcnQgc3VicHJvY2VzcwoKZGVmIHJ1bl9tb3VudF9zY3JpcHQoanNvbl9kYXRhKToKICAgIGFjY291bnRfbmFtZXMgPSBqc29uX2RhdGEuZ2V0KCJTdG9yYWdlQWNjb3VudE5hbWUiLCBbXSlbMF0KICAgIGFjY291bnRfa2V5cyA9IGpzb25fZGF0YS5nZXQoIlN0b3JhZ2VBY2NvdW50S2V5IiwgW10pWzBdCiAgICBmaWxlc2hhcmVzID0ganNvbl9kYXRhLmdldCgiRmlsZXNoYXJlTmFtZSIsIFtdKVswXQoKICAgICMgTWF0Y2ggdGhlbSBieSBpbmRleAogICAgZm9yIG5hbWUsIGtleSwgc2hhcmUgaW4gemlwKGFjY291bnRfbmFtZXMsIGFjY291bnRfa2V5cywgZm [...]
      "scriptConfigureDSVM": "IyEvYmluL2Jhc2gKIyBUaGlzIHNjcmlwdCBwcmVwYXJlcyBhbiBBenVyZSBNYXJrZXRwbGFjZSBVYnVudHUgMjIuMDQgRGF0YSBTY2llbmNlIFZpcnR1YWwgTWFjaGluZQoKIyBBIGZ1bmN0aW9uIHRvIGNyZWF0ZSBhIGNvbW1lbnQgd2l0aCBhIHRpbWVzdGFtcApmdW5jdGlvbiBsb2dNZXNzYWdlIHsKICAgIGNvbW1lbnRUaW1lU3RhbXA9IltgZGF0ZSArJVktJW0tJWRfJUg6JU06JVMuJTJOYF1+IgogICAgZWNobyAiJGNvbW1lbnRUaW1lU3RhbXAgJDEiIHwgdGVlIC1hIC90bXAvY29uZmlndXJlX1NMVVJNX0RTVk1fMjIwNC5sb2cKfQoKIyB+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn [...]
      "repositoriesRaw": "[string(variables('loome').ProjectResources.DataRepositories)]",
      "repositoriesEscaped": "[replace(variables('repositoriesRaw'), '\"', '\\\"')]",
      "userDataScript": [
        "#!/bin/bash",
        "mkdir -p /opt/projectrepos",
        "[concat('echo ', variables('repositoriesEscaped'), '> /opt/projectrepos/repositories.json')]",
        "chmod 644 /opt/projectrepos/repositories.json",
        "[concat('echo ', variables('scriptParse'), ' | base64 -d > /opt/projectrepos/parse.py')]",
        "[concat('echo ', variables('scriptMount'), ' | base64 -d > /opt/projectrepos/mount_azure.py')]",
        "[concat('echo ', variables('scriptConfigureDSVM'), ' | base64 -d > /opt/projectrepos/configure_dsvm.sh')]",
        "sudo python3 /opt/projectrepos/parse.py --input /opt/projectrepos/repositories.json --output /opt/projectrepos/processed.json",
        "sudo python3 /opt/projectrepos/mount_azure.py --input /opt/projectrepos/processed.json",
        "sudo bash /opt/projectrepos/configure_dsvm.sh",
        "sleep 5 && sudo rm -r /opt/projectrepos"
      ]
    },
    "resources": [
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2020-05-01",
        "name": "[variables('networkInterfaceName')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "subnet": {
                  "id": "[variables('subnetRef')]"
                },
                "privateIPAllocationMethod": "Dynamic"
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[variables('nsgId')]"
          }
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-05-01",
        "name": "[variables('networkSecurityGroupName')]",
        "location": "[variables('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "JupyterHub",
              "properties": {
                "priority": 1010,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "8000"
              }
            },
            {
              "name": "SSH",
              "properties": {
                "priority": 1030,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2019-07-01",
        "name": "[variables('uniqueVMName')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[variables('vmSize')[parameters('Size')]]",
          },
          "storageProfile": {
            "osDisk": {
              "createOption": "fromImage",
              "diskSizeGB": "[variables('osDiskSize')]",
              "managedDisk": {
                "storageAccountType": "[variables('osDiskType')]"
              }
            },
            "imageReference": {
              "publisher": "microsoft-dsvm",
              "offer": "ubuntu-2204",
              "sku": "2204-gen2",
              "version": "latest"
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
              }
            ]
          },
          "osProfile": {
            "computerName": "[variables('uniqueVMName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]",
            "customData": "[base64(join(variables('userDataScript'), '\n'))]"
          },
          "priority": "[variables('instancePriority')[parameters('instanceType')]]",
          "evictionPolicy": "[variables('instanceEvictionPolicy')[parameters('instanceType')]]",
          "billingProfile": {
            "maxPrice": "[variables('instanceMaxPrice')[parameters('instanceType')]]"
          }
        }
      }
    ],
    "outputs": {
       "loginUsername": {
        "type": "string",
        "value": "[parameters('adminUsername')]"
       },
        "privateIpAddress": {
        "type": "string",
        "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))).ipConfigurations[0].properties.privateIpAddress]"
      },
       "deployedVirtualMachineName": {
        "type": "string",
        "value": "[variables('uniqueVMName')]"
       }
    }
}
